# Raspberry-Pi-Pico-MacroPad

./: CMakeLists.txt  LICENSE  README.md  pico_sdk_import.cmake
.github/workflows/: main.yml
examples/: CMakeLists.txt
examples/Simple/: CMakeLists.txt  Main.cpp
src/: CMakeLists.txt  RGBMacroLibrary.cpp  RGBMacroLibrary.hpp  usb_descriptors.c
